# rure

./: Cargo.toml  README.md  libmax.rlib  libsimple_unsafe.rlib
slides/: template.html
src/: lib.rs
src/exec/: driver.rs  mod.rs
src/exec/driver/: mod.rs
src/exec/driver/analysis_passes/: mod.rs
src/exec/driver/analysis_passes/sir/: mod.rs  structures.rs
src/exec/driver/analysis_passes/smt/: mod.rs
src/exec/driver/analysis_passes/symb_exec/: mod.rs
tests/: compiletest.rs
tests/rure-fail/: max.rs  simple_unsafe.rs
tests/rure-succ/: max.rs  simple.rs
